// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SchoolGoalAndStats calculates goal met correctly 1`] = `
<div class="school-goals-and-stats card-content">
  <div class="md:flex md:flex-row-reverse mb-4 md:border-b-2">
    <div class="md:w-1/2 mb-4 text-center">
      <!---->
    </div>
    <div class="md:w-1/2 flex items-center justify-between md:mb-4 md:pr-6">
      <div class="w-2/3 md:p-4 mx-auto">
        <!---->
        <!---->
        <p class="mb-6 hidden md:block  text-2xl text-center">
          Stuff
        </p>
      </div>
      <div class="md:p-4">
        <!---->
      </div>
    </div>
    <div class="text-xl mb-6 block md:hidden mt-3 text-center">
      Stuff
    </div>
  </div>
  <div class="md:flex pb-4">
    <div class="md:w-1/2 p-4 md:border-r-2">
      <h2 class="text-xl font-bold">

      </h2>
      <p class="text-sm mb-0">


        1


      </p>
      <p class="text-sm mb-4">


      </p>
      <!---->
      <div class="p-0">
        <div class="mb-4">
          <!---->
        </div>
      </div>
    </div>
    <div class="md:w-1/2 p-4">
      <h2 class="text-xl font-bold">
        Pledges by State
      </h2>
      <pledgesbystate-stub program="[object Object]"></pledgesbystate-stub>
    </div>
  </div>
</div>
`;

exports[`SchoolGoalAndStats calculates goal not met correctly 1`] = `
<div class="school-goals-and-stats card-content">
  <div class="md:flex md:flex-row-reverse mb-4 md:border-b-2">
    <div class="md:w-1/2 mb-4 text-center">
      <!---->
    </div>
    <div class="md:w-1/2 flex items-center justify-between md:mb-4 md:pr-6">
      <div class="w-2/3 md:p-4">
        <h2 class="is-paddingless is-marginless text-xl">

        </h2>
        <h3 class="is-paddingless is-marginless text-3xl font-semibold">
          $
        </h3>
        <p class="mb-6 hidden md:block  text-lg">
          Stuff
        </p>
      </div>
      <div class="md:p-4">
        <ringchart-stub value="50" class="md:w-64 md:h-64 w-32 h-32"></ringchart-stub>
      </div>
    </div>
    <div class="text-xl mb-6 block md:hidden">
      Stuff
    </div>
  </div>
  <div class="md:flex pb-4">
    <div class="md:w-1/2 p-4 md:border-r-2">
      <h2 class="text-xl font-bold">

      </h2>
      <p class="text-sm mb-0">


        1


      </p>
      <p class="text-sm mb-4">


      </p>
      <!---->
      <div class="p-0">
        <div class="mb-4">
          <!---->
        </div>
      </div>
    </div>
    <div class="md:w-1/2 p-4">
      <h2 class="text-xl font-bold">
        Pledges by State
      </h2>
      <pledgesbystate-stub program="[object Object]"></pledgesbystate-stub>
    </div>
  </div>
</div>
`;

exports[`SchoolGoalAndStats it calculates goal correctly when client_goal is 0 1`] = `
<div class="school-goals-and-stats card-content">
  <div class="md:flex md:flex-row-reverse mb-4 md:border-b-2">
    <div class="md:w-1/2 mb-4 text-center">
      <!---->
    </div>
    <div class="md:w-1/2 flex items-center justify-between md:mb-4 md:pr-6">
      <div class="w-2/3 md:p-4 mx-auto">
        <!---->
        <!---->
        <p class="mb-6 hidden md:block  text-2xl text-center">
          Stuff
        </p>
      </div>
      <div class="md:p-4">
        <!---->
      </div>
    </div>
    <div class="text-xl mb-6 block md:hidden mt-3 text-center">
      Stuff
    </div>
  </div>
  <div class="md:flex pb-4">
    <div class="md:w-1/2 p-4 md:border-r-2">
      <h2 class="text-xl font-bold">

      </h2>
      <p class="text-sm mb-0">


        1


      </p>
      <p class="text-sm mb-4">


      </p>
      <!---->
      <div class="p-0">
        <div class="mb-4">
          <!---->
        </div>
      </div>
    </div>
    <div class="md:w-1/2 p-4">
      <h2 class="text-xl font-bold">
        Pledges by State
      </h2>
      <pledgesbystate-stub program="[object Object]"></pledgesbystate-stub>
    </div>
  </div>
</div>
`;
